# get_nebular_emission

./: .gitignore  README.rst  pyproject.toml  run_hdf5input_tutorial.py  run_txtinput_tutorial.py  slurm_hdf5_run.py
.github/workflows/: test.yml
data/example_data/iz61/: GP20_31p25kpc_z0_example_vol0.hdf5  GP20_31p25kpc_z0_example_vol1.hdf5
data/example_data/iz61/ivol0/: ex.hdf5
data/example_data/iz61/ivol1/: ex.hdf5
data/nebular_data/feltre16_tables/: limits_feltre.txt
data/nebular_data/gutkin16_tables/: info_gutkin.txt
data/observational_data/: pozzetti_tab3.txt
data/slurm_templates/: slurm_taurus_template.sh
docs/: index.rst  overview.rst  requirements.txt  src.rst
src/: gne.py  gne_Lagn.py  gne_Z.py  gne_att.py  gne_const.py  gne_cosmology.py  gne_epsilon.py  gne_flux.py  gne_io.py  gne_m_sfr.py  gne_model_UnH.py  gne_photio.py  gne_plots.py  gne_sfr.py  gne_stats.py  gne_style.py  gne_une.py  prep_input.py
src/gne/: gne.py  gne_Lagn.py  gne_Z.py  gne_att.py  gne_const.py  gne_cosmology.py  gne_epsilon.py  gne_flux.py  gne_io.py  gne_m_sfr.py  gne_model_UnH.py  gne_photio.py  gne_plot_obs.py  gne_plots.py  gne_slurm.py  gne_stats.py  gne_style.py
tests/: test_Lagn.py  test_att.py  test_cosmo.py  test_epsilon.py  test_flux.py  test_io.py  test_m_sfr.py  test_model_UnH.py  test_photio.py  test_plot_obs.py  test_plots.py  test_slurm.py  test_stats.py
